# qkay

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: codespell.yml  docker.yml  package.yml  ruff.yml  tests.yml
docs/source/: conf.py  database.rst  index.rst  usage.rst
nginx/: Dockerfile
nginx/conf.d/: app.conf
qkay/: __init__.py  config.py  index.py  qkay.py  wsgi.py
qkay/scripts_js/: script_button_rating_widget.txt  script_button_rating_widget_template.txt  script_button_rating_widget_template_minimum_time.txt
qkay/templates/: add_admin.html  admin_panel.html  assign_dataset.html  base.html  change_psw.html  create_dataset.html  error_empty_dataset.html  index.html  index_reports.html  login.html  parameters_selection.html  register.html  register_new_user.html  remove_admin.html  remove_dataset.html  remove_inspection.html  remove_user.html  report.html  user_1_dataset_example_index.html  user_info.html  user_panel.html  user_panel_admin_version.html  welcome.html
test/: test_create_dataset.py  test_reshuffling.py
tests/: test_dataset_creation.py  test_dataset_validation.py
